Version 0.6.5 Fixed bug where "Waiting for master server..." dialog would get stuck if server became a slave. Updated copyright years. Small CSS cursor fix on dialog text.

--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -523,3 +523,9 @@ span.link.abort {
 span.link.abort:hover {
 	color: red;
 }
+
+/* Dialog Fixes */
+
+div.dialog_subtitle {
+	cursor: default;
+}
